# Newbee

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_edit_data_dict.sh
.claude/rules/: cpp-style.md  data-sop.md  python-style.md
alpha_backend/: __init__.py  alpha_store.py  cli.py
alpha_backend/datasource/: __init__.py  calendar.py  cli.py  codegen.py  registry.py  trading_date.py
alpha_backend/engines/: backtest_alpha.py  backtest_portfolio.py
alpha_backend/factors/: __init__.py  base.py  pipeline.py  registry.py
configs/: README.md
data_dict/: Adj_Factor.yaml  Features_Alpha.yaml  KData.yaml  Stock_Basic_Data.yaml  Trade_Status.yaml  Universe.yaml
docs/: 01_first_factor.ipynb  01_first_factor.py  02_alpha_to_portfolio.py  03_daily_update.py  2026-06-23.md  data-architecture.md  platform-design.md  release-notes-data-refactor.md  user-manual.md
newbee/: __init__.py  alpha_store.py  cli.py
newbee/data/: pit.py  (+5 more)
scripts/: fetch_data.py  fetch_incremental.py  init_universe.py  run_alpha_backtest.py  run_fetch_noproxy.py  run_portfolio_backtest.py
tests/: __init__.py  conftest.py  test_append_fetch.py  test_bars_adapter.py  test_cli_update_trading_date.py  test_codegen_registry_sync.py  test_dict_sync.py  test_dry_run.py  test_fetch_state.py  test_infer_dates.py  test_kdata_service.py  test_latest_trading_day.py  test_legacy_kdata_migration.py  test_logger.py  test_new_stock_alignment.py  test_no_lookahead.py  test_optimizer.py  test_pit.py  test_pool_adapter.py  test_populate_adj_factor.py  test_state_tracker.py  test_storage_io.py  test_trade_status_service.py  test_trading_date_judgment.py  test_trading_date_service.py  test_universe_service.py
(+91 files in other folders)
