[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newbee"
version = "0.1.0"
description = "量化研究 + 交易信号生成平台 (M1 骨架)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yejingtao" }]

dependencies = [
    # 核心计算
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    # 存储
    "duckdb>=0.10",
    "pyarrow>=14",          # parquet 支持
    # 交易日历
    "exchange_calendars>=4.2",
    # 数据源
    "akshare>=1.12",        # 主数据源
    "tushare>=1.4",         # 备选, 保留接口
    # 配置
    "pyyaml>=6.0",
    "pydantic>=2.5",
    # 可视化
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # 工具
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
newbee = "newbee.cli:main"

[tool.setuptools]
packages = ["newbee", "newbee.datasource", "newbee.datasource.storage", "newbee.datasource.sources", "newbee.datasource.service", "newbee.engines", "newbee.factors", "newbee.factors.classic", "newbee.portfolio", "newbee.utils"]

[tool.setuptools.package-data]
newbee = ["py.typed"]
"newbee.datasource" = ["schemas/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]  # line-too-long, 单独配

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
